DCJTest/rps/sub-1.out
STDOUT:


STDERR:
Main.java:103: error: ')' expected
    for (int i = 0; i < tmp.length; i++) { tmp[i] = nodes[i].getln(Player::new); }
                                                                         ^
Main.java:103: error: illegal start of expression
    for (int i = 0; i < tmp.length; i++) { tmp[i] = nodes[i].getln(Player::new); }
                                                                          ^
Main.java:103: error: ';' expected
    for (int i = 0; i < tmp.length; i++) { tmp[i] = nodes[i].getln(Player::new); }
                                                                           ^
Main.java:103: error: illegal start of expression
    for (int i = 0; i < tmp.length; i++) { tmp[i] = nodes[i].getln(Player::new); }
                                                                              ^
Main.java:108: error: ')' expected
    runRange(ranges, Main::slave, Main::master);
                         ^
Main.java:108: error: illegal start of expression
    runRange(ranges, Main::slave, Main::master);
                          ^
Main.java:108: error: ';' expected
    runRange(ranges, Main::slave, Main::master);
                                      ^
Main.java:108: error: not a statement
    runRange(ranges, Main::slave, Main::master);
                                        ^
Main.java:108: error: ';' expected
    runRange(ranges, Main::slave, Main::master);
                                              ^
9 errors
